# nxlog-ce

./: ChangeLog.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.in  libtool  version.sh
doc/: Makefile.in
doc/reference-manual/: Makefile.in  apidoc.pl  fields.pl
doc/reference-manual/config-examples/: Makefile.am  Makefile.in  apache_parse.conf  cisco_acs.conf  cisco_pix_asa.conf  config-example-apache_parse.xml  config-example-apache_url.conf.xml  config-example-apache_url.in.xml  config-example-apache_url.out.xml  config-example-cisco_acs.conf.xml  config-example-cisco_acs.in.xml  config-example-cisco_acs.out.xml  config-example-cisco_acs.xml  config-example-cisco_pix_asa.xml  config-example-common.xml  config-example-detect_no_logs.xml  config-example-evcorr2.conf.xml  config-example-exec.xml  config-example-im_dbi_mysql.xml  config-example-im_exec.xml  config-example-im_file.xml  config-example-im_internal.xml  config-example-im_kernel.xml  config-example-im_mark.xml  config-example-im_ssl.xml  config-example-im_tcp.xml  config-example-im_udp.xml  config-example-im_uds.xml  config-example-inputtype.xml  config-example-om_blocker.xml  config-example-om_dbi_mysql.xml  config-example-om_dbi_pgsql.xml  config-example-om_exec.xml  config-example-om_file.xml  config-example-om_file_rotate1.xml  config-example-om_http.xml  config-example-om_ssl.xml  config-example-om_tcp.xml  config-example-om_udp.xml  config-example-om_uds.xml  (+180 more)
doc/reference-manual/en/: Makefile.am  Makefile.in  apidoc-core.xml  apidoc-im_file.xml  apidoc-om_file.xml  apidoc-om_http.xml  apidoc-pm_blocker.xml  apidoc-pm_buffer.xml  apidoc-xm_charconv.xml  apidoc-xm_csv.xml  apidoc-xm_exec.xml  apidoc-xm_fileop.xml  apidoc-xm_json.xml  apidoc-xm_kvp.xml  apidoc-xm_multiline.xml  apidoc-xm_perl.xml  apidoc-xm_syslog.xml  apidoc-xm_xml.xml  apidoc.sh  architecture.xml  configuration.xml  fields-core.xml  fields-im_internal.xml  fields-im_mark.xml  fields-im_mseventlog.xml  fields-im_msvistalog.xml  fields-im_ssl.xml  fields-im_tcp.xml  fields-im_udp.xml  fields-pm_norepeat.xml  fields-pm_pattern.xml  fields-xm_syslog.xml  fields.sh  forwarding.xml  introduction.xml  language.xml  modules.xml  nxlog-reference-manual.html  nxlog-reference-manual.txt  nxlog-reference-manual.xml  (+6 more)
doc/reference-manual/en/modules/extension/: charconv.xml  csv.xml  exec.xml  fileop.xml  gelf.xml  json.xml  kvp.xml  multiline.xml  perl.xml  syslog.xml  wtmp.xml  xml.xml
doc/reference-manual/en/modules/input/: dbi.xml  exec.xml  file.xml  internal.xml  kernel.xml  mark.xml  mseventlog.xml  msvistalog.xml  null.xml  ssl.xml  tcp.xml  udp.xml  uds.xml
doc/reference-manual/en/modules/output/: blocker.xml  dbi.xml  exec.xml  file.xml  http.xml  null.xml  ssl.xml  tcp.xml  udp.xml  uds.xml
doc/reference-manual/en/modules/processor/: blocker.xml  buffer.xml  evcorr.xml  filter.xml  norepeat.xml  null.xml  pattern.xml  transformer.xml
doc/reference-manual/hu/: Makefile.in
packaging/aix/: init  nxlog.spec
packaging/debian/: make_debs.sh  nxlog.conf  rules
packaging/macosx/: buildpkg.sh  nxlog.conf
packaging/redhat/: init  make_rpm.sh  nxlog.conf  nxlog.spec  nxlog.spec.RHEL5  nxlog.spec.RHEL5.in  nxlog.spec.in
packaging/solaris/: pkginfo  prototype
packaging/suse/: README  init  nxlog.spec.SLES11
packaging/windows/: license.rtf  nxlog.wxs  nxlog.wxs.in  pkgmsi.sh  pkgmsi.sh.in  wininst.sh
src/: Makefile.in
src/common/: Makefile.am  Makefile.in  cfgfile.h  config.h.in  config_cache.c  config_cache.h  confparser.c  core-api.xml  core-fields.xml  date.c  date.h  expr-core-funcproc-cb.c  expr-core-funcproc.h  expr-grammar.c  expr-grammar.h  expr-grammar.y  expr-parser.c  expr-parser.h  expr-tokens.c  expr-tokens.l  expr.c  expr.h  logdata.c  logqueue.c  module.c  module.h  readerfuncs.c  ssl.c  str.c  str.h  value.c  writerfuncs.c
src/core/: Makefile.am  Makefile.in  ctx.c  main-win32.c  modules.c  modules.h
src/modules/: Makefile.in
src/modules/extension/: Makefile.in
src/modules/extension/charconv/: Makefile.in  charconv.c  expr-xm_charconv-funcproc.h  xm_charconv-api.xml  xm_charconv_funcproc_cb.c
src/modules/extension/csv/: Makefile.in  csv.c  csv.h  expr-xm_csv-funcproc.h  xm_csv-api.xml  xm_csv_funcproc_cb.c
src/modules/extension/exec/: Makefile.in  expr-xm_exec-funcproc.h  xm_exec-api.xml  xm_exec.c  xm_exec_funcproc_cb.c
src/modules/extension/fileop/: Makefile.in  expr-xm_fileop-funcproc.h  xm_fileop-api.xml  xm_fileop_funcproc_cb.c
src/modules/extension/gelf/: Makefile.am  Makefile.in  gelf.c  gelf.h  xm_gelf.c
src/modules/extension/json/: Makefile.in  expr-xm_json-funcproc.h  json.c  xm_json-api.xml  xm_json_funcproc_cb.c
src/modules/extension/kvp/: Makefile.in  expr-xm_kvp-funcproc.h  kvp.c  xm_kvp-api.xml  xm_kvp_funcproc_cb.c
src/modules/extension/multiline/: Makefile.in  xm_multiline.c
src/modules/extension/perl/: Makefile.in  expr-xm_perl-funcproc.h  xm_perl-api.xml  xm_perl_funcproc_cb.c
src/modules/extension/syslog/: Makefile.in  expr-xm_syslog-funcproc.h  syslog.c  xm_syslog-api.xml  xm_syslog-fields.xml  xm_syslog.c  xm_syslog_funcproc_cb.c
src/modules/extension/wtmp/: Makefile.in
src/modules/extension/xml/: Makefile.in  expr-xm_xml-funcproc.h  xm_xml-api.xml  xm_xml_funcproc_cb.c  xml.c
src/modules/input/: Makefile.am  Makefile.in
src/modules/input/dbi/: Makefile.in  im_dbi.c  im_dbi.h
src/modules/input/exec/: Makefile.in  im_exec.c
src/modules/input/file/: Makefile.in  im_file-api.xml  im_file.c
src/modules/input/internal/: Makefile.in  (+1 more)
src/modules/input/mseventlog/: Makefile.am  Makefile.in  im_mseventlog-fields.xml  im_mseventlog.c  im_mseventlog.h
src/modules/input/msvistalog/: Makefile.am  Makefile.in  im_msvistalog-fields.xml  im_msvistalog.c  im_msvistalog.h  winevt.h
src/modules/output/: Makefile.in
src/modules/processor/: Makefile.in
src/utils/: Makefile.in  codegen.pl
test/: Makefile.in  common.conf  tester.pl
test/common/: Makefile.in  date.c  stmnt-test.c  stmnt-test.sh
test/coresrc/: Makefile.in  event.c
(+96 files in other folders)
